tests/fail/escape_effects_basic.stderr
tests/fail/escape_effects_basic.tk:3:16: error[E0455]: Returning reference to local variable 'a' is unsafe
tests/fail/escape_effects_basic.tk:5:12: error[E0455]: Returning reference to local variable 'b' is unsafe
tests/fail/escape_effects_basic.tk:13:16: error[E0455]: Returning reference to local variable 'a' is unsafe
tests/fail/escape_effects_basic.tk:15:12: error[E0455]: Returning reference to local variable 'b' is unsafe
tests/fail/escape_effects_basic.tk:23:16: error[E0455]: Returning reference to local variable 'a' is unsafe
tests/fail/escape_effects_basic.tk:25:12: error[E0455]: Returning reference to local variable 'b' is unsafe
